[package]
name = "rrpl"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.1.8", features = ["derive"] }
log = "0.4.16"
simplelog = "^0.12.0"
